--- a/src/components/FaqCard.css
+++ b/src/components/FaqCard.css
@@ -1,18 +1,46 @@
 .faq {
 	background-color: var(--color-white);
-	padding: 2.4rem;
+	padding: 14rem 2.4rem 5rem 2.4rem;
 	height: 100%;
 	width: 100%;
-    box-shadow: 0 50px 50px rgb(53, 18, 122, .5);
-    border-radius: 23px;
-    position: relative;
+	box-shadow: 0 50px 50px rgb(53, 18, 122, .5);
+	border-radius: 23px;
+	position: relative;
+	/* display: flex;
+	flex-direction: column;
+	align-items: center; */
 }
 
+/* .faq_illustrations {
+    display: flex;
+    align-items: center;
+} */
+
 .faq__image {
-    height: 18rem;
-    width: 23.7rem;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-image: url(../assets/illustration-woman-online-mobile.svg);
-    /* position: absolute; */
+	display: block;
+	height: 18rem;
+	width: 23.7rem;
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-image: url(../assets/illustration-woman-online-mobile.svg);
+	position: absolute;
+	top: -9.5rem;
+	left: calc(50% - 1.3rem);
+	transform: translateX(-50%);
+	z-index: 2;
+}
+
+.faq__bg {
+	display: block;
+	margin: auto;
+	height: 18rem;
+	width: 21.5rem;
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-image: url(../assets/bg-pattern-mobile.svg);
+	position: absolute;
+	top: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	z-index: 1;
 }
