--- a/src/components/Accordion.css
+++ b/src/components/Accordion.css
@@ -7,15 +7,15 @@
 	font-weight: var(--weight-bold);
 	text-align: center;
 	color: var(--color-dark-blue);
-	margin-bottom: 3rem;
+	margin-bottom: 2.5rem;
 }
 
 .faq__items {
 }
 
 .faq__item {
-	padding-top: 1.5rem;
-	padding-bottom: 1.5rem;
+	padding-top: 1.8rem;
+	padding-bottom: 1.8rem;
 	cursor: pointer;
 	border-bottom: 1px solid var(--color-light-gray);
 }
@@ -30,7 +30,8 @@
 	font-weight: 400;
 	color: var(--color-dark-gray);
 	position: relative;
-	margin-right: auto;
+    margin-right: auto;
+    transition: color .3s ease;
 }
 
 .faq__question:hover {
@@ -60,4 +61,16 @@
 
 .faq__item.active .faq__answer {
 	display: block;
+	animation: fadein .5s ease;
+}
+
+@keyframes fadein {
+	0% {
+		opacity: 0;
+		transform: translateY(-1.5rem);
+	}
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
 }
