--- a/src/components/Accordion.css
+++ b/src/components/Accordion.css
@@ -10,7 +10,10 @@
 	margin-bottom: 2.5rem;
 }
 
-.faq__items {
+@media only screen and (min-width: 1100px) {
+	.faq__heading {
+		text-align: left;
+	}
 }
 
 .faq__item {
@@ -30,8 +33,14 @@
 	font-weight: 400;
 	color: var(--color-dark-gray);
 	position: relative;
-    margin-right: auto;
-    transition: color .3s ease;
+	margin-right: auto;
+	transition: color .3s ease;
+}
+
+@media only screen and (min-width: 1100px) {
+	.faq__question {
+		font-size: 1.4rem;
+	}
 }
 
 .faq__question:hover {
