--- a/src/components/Accordion.css
+++ b/src/components/Accordion.css
@@ -1,5 +1,5 @@
 .faq__content {
-	max-width: 35rem;
+	max-width: 33.5rem;
 }
 
 .faq__heading {
@@ -17,8 +17,8 @@
 }
 
 .faq__item {
-	padding-top: 1.8rem;
-	padding-bottom: 1.8rem;
+	padding-top: 1.7rem;
+	padding-bottom: 1.7rem;
 	cursor: pointer;
 	border-bottom: 1px solid var(--color-light-gray);
 }
@@ -33,6 +33,7 @@
 	font-weight: 400;
 	color: var(--color-dark-gray);
 	position: relative;
+	padding-right: 1.5rem;
 	margin-right: auto;
 	transition: color .3s ease;
 }
