--- a/src/components/FaqCard.css
+++ b/src/components/FaqCard.css
@@ -15,7 +15,7 @@
 		justify-content: flex-end;
 		height: 50.9rem;
 		width: 92rem;
-		padding: 5rem;
+		padding: 0 11rem;
 		overflow: hidden;
 	}
 }
@@ -40,7 +40,7 @@
 		width: 47.2rem;
 		top: 50%;
 		left: -8rem;
-		transform: translateY(-50%);
+		transform: translateY(-51%);
 		background-image: url(../assets/illustration-woman-online-desktop.svg);
 	}
 }
@@ -64,12 +64,29 @@
 	.faq__bg {
 		height: 56.8rem;
 		width: 96.4rem;
-		top: 0;
+		top: -1.5rem;
 		left: -62%;
 		transform: translateX(0);
 		margin: 0;
 		background-size: cover;
 		background-position: 50% 75%;
 		background-image: url(../assets/bg-pattern-desktop.svg);
+	}
+}
+
+/* Box image on desktop */
+@media only screen and (min-width: 1100px) {
+	main::before {
+		content: '';
+		position: absolute;
+		width: 15rem;
+		height: 18rem;
+		left: calc((100vw - 92rem) / 2 - 9rem);
+		top: calc(50% + 4rem);
+		transform: translateY(-50%);
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-image: url(../assets/illustration-box-desktop.svg);
+		z-index: 3;
 	}
 }
